--- a/style/style.css
+++ b/style/style.css
@@ -7,3 +7,35 @@ canvas{
 body{
   background:black;
 }
+
+#draggable {
+  width: 150px;
+  padding: 20px;
+  background: transparent;
+  font-family: "helvetica";
+  line-height: 1px;
+  font-weight: 900;
+  font-size: 50px;
+  color: white;
+   transform: scale(0.6,0.6);
+}
+
+
+#draggable #one{
+  font-size: 46px;
+  margin-bottom:50px;
+}
+
+#draggable #two{
+  font-size: 77px;
+  margin-top: 0px;
+}
+
+#draggable #three{
+  font-size: 50px;
+  margin-top: -25px;
+}
+
+#draggable #four{
+  font-size: 19px;
+}
